# book_library_system

ansible/: ansible.cfg  site.yml
ansible/inventory/development/: hosts.yml
ansible/inventory/group_vars/development/: main.yml
ansible/playbooks/: deploy.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: chrony.conf.j2  jail.local.j2  sshd_config.j2
ansible/roles/common/vars/: main.yml
ansible/roles/database/tasks/: main.yml
ansible/roles/database/vars/: main.yml
ansible/roles/monitoring/tasks/: main.yml
ansible/roles/nginx/handlers/: main.yml
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: application.conf.j2  nginx.conf.j2
ansible/roles/nginx/vars/: main.yml
ansible/roles/python/tasks/: main.yml
ansible/roles/python/templates/: django_env.j2  gunicorn.conf.py.j2  gunicorn.service.j2
ansible/roles/python/vars/: main.yml
ansible/vault/: vault_example.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fix_fixtures.py  manage.py  postman_collection.json  pyproject.toml  requirements.txt
backend/analytics/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/analytics/migrations/: 0001_initial.py  0002_initial.py  __init__.py
backend/authentication/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py  views_ui.py
backend/authentication/idcs/: __init__.py  backend.py  client.py  views.py
backend/authentication/management/: __init__.py
backend/authentication/management/commands/: load_fixture.py
backend/authentication/migrations/: 0001_initial.py  __init__.py
backend/books/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/books/management/commands/: create_initial_data.py
backend/books/migrations/: 0001_initial.py  __init__.py
backend/fixtures/: book_categories.json  books.json  borrowing_records.json  user_credit_scores.json  users.json
backend/library_system/: __init__.py  asgi.py  celery.py  health.py  urls.py  utils.py  views.py  wsgi.py
backend/library_system/settings/: __init__.py  base.py  development.py  production.py
backend/notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py
backend/templates/: .gitkeep
backend/templates/registration/: signup.html
infrastructure/: TERRAFORM_IMPLEMENTATION_STATUS.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/development/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/production/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/staging/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/compute/: main.tf  outputs.tf  variables.tf
infrastructure/modules/compute/scripts/: bastion_user_data.sh  user_data.sh
infrastructure/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/modules/monitoring/: main.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/modules/security/: main.tf  outputs.tf  variables.tf
